feat: add meterial components

--- a/package.json
+++ b/package.json
@@ -13,12 +13,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/core": "github:angular/core-builds",
     "@angular/common": "github:angular/common-builds",
     "@angular/compiler": "github:angular/compiler-builds",
+    "@angular/core": "github:angular/core-builds",
     "@angular/http": "github:angular/http-builds",
     "@angular/platform-browser": "github:angular/platform-browser-builds",
     "@angular/router": "^3.0.0-alpha",
+    "@angular2-material/button": "^2.0.0-alpha.5-2",
+    "@angular2-material/card": "^2.0.0-alpha.5-2",
+    "@angular2-material/checkbox": "^2.0.0-alpha.5-2",
+    "@angular2-material/core": "^2.0.0-alpha.5-2",
+    "@angular2-material/grid-list": "^2.0.0-alpha.5-2",
+    "@angular2-material/icon": "^2.0.0-alpha.5-2",
+    "@angular2-material/input": "^2.0.0-alpha.5-2",
+    "@angular2-material/list": "^2.0.0-alpha.5-2",
+    "@angular2-material/progress-bar": "^2.0.0-alpha.5-2",
+    "@angular2-material/progress-circle": "^2.0.0-alpha.5-2",
+    "@angular2-material/radio": "^2.0.0-alpha.5-2",
+    "@angular2-material/sidenav": "^2.0.0-alpha.5-2",
+    "@angular2-material/tabs": "^2.0.0-alpha.5-2",
+    "@angular2-material/toolbar": "^2.0.0-alpha.5-2",
     "angularfire2": "^2.0.0-beta.0",
     "es6-shim": "^0.35.0",
     "firebase": "^2.4.2",
@@ -28,7 +42,7 @@
     "zone.js": "^0.6.12"
   },
   "devDependencies": {
-    "angular-cli": "^1.0.0-beta.0",
+    "angular-cli": "^1.0.0-beta.5",
     "clang-format": "^1.0.35",
     "codelyzer": "0.0.14",
     "ember-cli-inject-live-reload": "^1.4.0",
@@ -40,7 +54,7 @@
     "protractor": "^3.3.0",
     "ts-node": "^0.5.5",
     "tslint": "^3.6.0",
-    "typescript": "^1.8.10",
+    "typescript": "^1.9.0-dev.20160608-1.0",
     "typings": "^0.8.1"
   }
 }
