--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "github:angular/platform-browser-builds",
     "@angular/platform-browser-dynamic": "github:angular/platform-browser-dynamic-builds",
     "@angular/router": "github:angular/router-builds",
+    "@angular/tsc-wrapped": "github:angular/tsc-wrapped-builds",
     "@angular2-material/button": "next",
     "@angular2-material/card": "next",
     "@angular2-material/checkbox": "next",
@@ -36,7 +37,7 @@
     "@angular2-material/sidenav": "next",
     "@angular2-material/tabs": "next",
     "@angular2-material/toolbar": "next",
-    "angularfire2": "^2.0.0-beta.2",
+    "angularfire2": "next",
     "es6-shim": "^0.35.0",
     "firebase": "^3.2.1",
     "reflect-metadata": "0.1.3",
